homelessness map render on ie11 mobile fix and quality of life header fix for IE11 mobile burger

--- a/src/components/headers/page-mobile.scss
+++ b/src/components/headers/page-mobile.scss
@@ -24,6 +24,7 @@
     padding: 0;
     padding-right: 2rem;
     right: 0;
+    top: 16px;
     width: auto;
     border-top: none;
     height: 24px;
