--- a/src/components/headers/page.module.scss
+++ b/src/components/headers/page.module.scss
@@ -83,7 +83,7 @@
 } // end header-nav
 
 .nav.tight {
-  padding-top: 0;
+  padding-top: 2px;
   margin: 0;
   border-top: none;
   width: auto;
